--- a/就业班.md
+++ b/就业班.md
@@ -1,18 +1,12 @@
-就业班
-
 ### 0 网络编程
 
 所谓的网络编程就是，让在不同的电脑上的软件能够进行数据传递，即进程之间的通信
 
-##### ip地址
-
-ip地址：用来在网络中标记一台电脑，比如192.168.1.1；在本地局域网上是唯一的。
+ip 地址：用来在网络中标记一台电脑，比如192.168.1.1；在本地局域网上是唯一的。
 
 ##### 端口
 
-**端口是通过端口号来标记**的，端口号只有整数，范围是从**0到65535** 
-
-端口号不是随意使用的，而是按照一定的规定进行分配。这里不做详细讲解，只介绍一下知名端口和动态端口。
+**端口是通过端口号来标记**的，端口号只有整数，范围是从**0到65535**，不是随意使用的，而是按照一定的规定进行分配。
 
 **知名端口**是众所周知的端口号，**范围从0到1023**，80端口分配给HTTP服务，21端口分配给FTP服务
 
@@ -125,7 +119,7 @@ recvfrom() 在没有收到数据时堵塞
 
 套接字可同时收发 —— 全双工       (单工、半双工、全双工)
 
-##### python3编码转换
+##### python3 编码转换
 
 `str->bytes:encode编码 ; bytes->str:decode解码`
 
@@ -2051,7 +2045,7 @@ if __name__ == "__main__":
 
 客户端端口随机
 
-# Web静态服务器-2-显示需要的页面
+##### Web静态服务器-2-显示需要的页面
 
 ```python
 # show_need_html.py
@@ -5333,9 +5327,411 @@ start slave;  (mysql中执行)
 # Slave_IO_Running 和 Slave_SQL_Running 都为 yes, 则正常运行
 ```
 
+#### 6 WSGI、mini-web框架
 
+使用 WSGI 协议 实现 mini-web框架，以下内容是迭代的
 
+##### 1 将多进程方式改为面向对象，实现web服务器
 
+```python
+# web_server.py 文件 web/http服务器
+import socket
+import re
+import multiprocessing
+class WSGIServer(object):
+    def __init__(self):
+        # 1. 创建套接字
+        self.tcp_server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        self.tcp_server_socket.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+        # 2. 绑定
+        self.tcp_server_socket.bind(("", 7890))
+        # 3. 变为监听套接字
+        self.tcp_server_socket.listen(128)
+    def service_client(self, new_socket):
+        """为这个客户端返回数据"""
+        # 1. 接收浏览器发送过来的请求 ，即http请求  
+        # GET / HTTP/1.1
+        # .....
+        request = new_socket.recv(1024).decode("utf-8")
+        # print(">>>"*50)
+        # print(request)
+        request_lines = request.splitlines()
+        print("")
+        print(">"*20)
+        print(request_lines)
+        # GET /index.html HTTP/1.1
+        # get post put del
+        file_name = ""
+        ret = re.match(r"[^/]+(/[^ ]*)", request_lines[0])
+        if ret:
+            file_name = ret.group(1)
+            # print("*"*50, file_name)
+            if file_name == "/":
+                file_name = "/index.html"
+        # 2. 返回http格式的数据，给浏览器
+        try:
+            f = open("./html" + file_name, "rb")
+        except:
+            response = "HTTP/1.1 404 NOT FOUND\r\n"
+            response += "\r\n"
+            response += "------file not found-----"
+            new_socket.send(response.encode("utf-8"))
+        else:
+            html_content = f.read()
+            f.close()
+            # 2.1 准备发送给浏览器的数据---header
+            response = "HTTP/1.1 200 OK\r\n"
+            response += "\r\n"
+            # 2.2 准备发送给浏览器的数据---boy
+            # response += "hahahhah"
+            # 将response header发送给浏览器
+            new_socket.send(response.encode("utf-8"))
+            # 将response body发送给浏览器
+            new_socket.send(html_content)
+        # 关闭套接
+        new_socket.close()
+    def run_forever(self):
+        """用来完成整体的控制"""
+        while True:
+            # 4. 等待新客户端的链接
+            new_socket, client_addr = self.tcp_server_socket.accept()
+            # 5. 为这个客户端服务
+            p = multiprocessing.Process(target=self.service_client, args=(new_socket,))
+            p.start()
+            new_socket.close()
+        # 关闭监听套接字
+        self.tcp_server_socket.close()
+def main():
+    """控制整体，创建一个web 服务器对象，然后调用这个对象的run_forever方法运行"""
+    wsgi_server = WSGIServer()
+    wsgi_server.run_forever()
+if __name__ == "__main__":
+    main()
+```
+
+##### 2 在web服务器中集成解析动态请求的功能
+
+```python
+        # 2. 返回http格式的数据，给浏览器
+        # 2.1 如果请求的资源不是以.py结尾，那么就认为是静态资源（html/css/js/png，jpg等）
+        if not file_name.endswith(".py"):
+            try:  # 省略
+        else:
+            # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
+            header = "HTTP/1.1 200 OK\r\n"
+            header += "\r\n"
+            body = "hahahah %s " % time.ctime()
+            response = header+body
+            # 发送response给浏览器
+            new_socket.send(response.encode("utf-8"))
+```
+
+##### 3 将web服务器和逻辑处理的代码分开
+
+```python
+import mini_frame
+            # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
+            header = "HTTP/1.1 200 OK\r\n"
+            header += "\r\n"
+            # body = "hahahah %s " % time.ctime()
+            # if file_name == "/login.py":  # 这原来只在 mini_frame.py 中放了函数
+            #     body = mini_frame.login()
+            # elif file_name == "/register.py":
+            #     body = mini_frame.register()
+            body = mini_frame.application(file_name)  
+            # 这样只需修改mini_frame中内容，这无需修改，如添加页面等
+            response = header+body
+            # 发送response给浏览器
+            new_socket.send(response.encode("utf-8"))
+# 新建 mini_frame.py  用于处理动态请求  相当于是 web应用/框架
+import time
+def login():
+    return "i----login--welcome hahahh to our website.......time:%s" % time.ctime()
+def register():
+    return "-----register---welcome hahahh to our website.......time:%s" % time.ctime()
+def profile():
+    return "-----profile----welcome hahahh to our website.......time:%s" % time.ctime()
+def application(file_name):
+	if file_name == "/login.py":
+		return login()
+	elif file_name == "/register.py":
+		return register()
+	else:
+		return "not found you page...."
+```
+
+##### 4 让web服务器支持WSGI协议
+
+```python
+            # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
+            env = dict()
+            body = mini_frame.application(env, self.set_response_header)
+            # env字典中存放的是web服务器要传递给 web框架的数据信息
+            header = "HTTP/1.1 %s\r\n" % self.status
+            for temp in self.headers:
+                header += "%s:%s\r\n" % (temp[0], temp[1])
+            header += "\r\n"
+            response = header+body
+            # 发送response给浏览器
+            new_socket.send(response.encode("utf-8"))
+# ...
+    def set_response_header(self, status, headers):
+        self.status = status
+        self.headers = [("server", "mini_web v8.8")]  # 服务器信息要写在服务器中，不应该写在下方
+        self.headers += headers
+# mini_frame.py 文件
+def application(environ, start_response):
+    start_response('200 OK', [('Content-Type', 'text/html;charset=utf-8')])
+    # start_response 可以把服务器信息和框架信息合并
+    return 'Hello World! 我爱你中国....'
+```
+
+##### web服务器示意图
+
+<img src="https://i.loli.net/2020/05/02/rc4wEJbymknpsYV.jpg" alt="web服务器示意图.002" style="zoom: 67%;" />
+
+http服务器中处理请求时拆分，只处理静态资源，动态资源由web框架处理 
+
+##### 浏览器请求动态页面过程
+
+<img src="https://i.loli.net/2020/05/02/dUyDToQlwrbxZ3V.png" alt="img" style="zoom:67%;" />
+
+##### WSGI
+
+WSGI(Web Server Gateway Interface)允许开发者将选择web框架和web服务器分开。可以混合匹配web服务器和web框架，选择一个适合的配对。
+
+web服务器必须具备WSGI接口，所有的现代Python Web框架都已具备WSGI接口，它让你不对代码作修改就能使服务器和特定的web框架协同工作。
+
+WSGI接口定义非常简单，它只要求Web开发者实现一个函数，就可以响应HTTP请求。我们来看一个最简单的Web版本的“Hello World!”：
+
+```python
+def application(environ, start_response):
+    start_response('200 OK', [('Content-Type', 'text/html')])
+    # 第一个为状态码，第二个在列表中存元组，按冒号分隔内容
+    return 'Hello World!'
+```
+
+上面的`application()`函数就是符合WSGI标准的一个HTTP处理函数，它接收两个参数：
+
+- environ：一个包含所有HTTP请求信息的dict对象；
+- start_response：一个发送HTTP响应的函数。
+
+整个`application()`函数本身没有涉及到任何解析HTTP的部分，也就是说，把底层web服务器解析部分和应用程序逻辑部分进行了分离，这样开发者就可以专心做一个领域了
+
+不过，等等，这个`application()`函数怎么调用？如果我们自己调用，两个参数environ和start_response我们没法提供，返回的str也没法发给浏览器。
+
+所以`application()`函数必须由WSGI服务器来调用。有很多符合WSGI规范的服务器。而我们此时的web服务器项目的目的就是做一个既能解析静态网页还可以解析动态网页的服务器
+
+> WSGI 没有官方的实现, 因为WSGI更像一个协议. 只要遵照这些协议,WSGI应用(Application)都可以在任何服务器(Server)上运行, 反之亦然。
+>
+> WSGI 接口有服务端和应用端两部分，服务端也可以叫网关端，应用端也叫框架端。服务端调用一个由应用端提供的可调用对象。
+>
+> WSGI规定，Web程序必须有一个可调用对象，且该可调用对象接收两个必选参数environ、start_response，返回一个可迭代对象用来表示http body：
+>
+> 1. environ：字典，包含请求的所有信息
+> 2. start_response：在可调用对象中调用的函数，用来发起响应，参数包括状态码，headers等 （start_response 是一个函数引用，定义在服务器中）
+>
+> 在可调用对象`application()`函数中执行start_response指向的函数时，返回header给服务器(服务器中执行函数，将header存起来就可以)，执行完成后，回到应用程序继续执行，再返回body给服务器
+>
+> WSGI协议就是规定服务器给框架什么，然后框架给服务器回什么
+
+##### 5 通过传递字典实现浏览器请求的资源不同响应不同
+
+```python
+            # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
+            env = dict()  # 这个字典中存放的是web服务器要传递给 web框架的数据信息
+            env['PATH_INFO'] = file_name
+            # {"PATH_INFO": "/index.py"}
+            body = mini_frame.application(env, self.set_response_header)
+            header = "HTTP/1.1 %s\r\n" % self.status
+            for temp in self.headers:
+                header += "%s:%s\r\n" % (temp[0], temp[1])
+            header += "\r\n"
+            response = header+body
+            # 发送response给浏览器
+            new_socket.send(response.encode("utf-8"))
+            
+# mini_frame.py 文件
+def index():
+    return "这是主页"
+def login():
+    return "这是登录页面"
+def application(env, start_response):
+    start_response('200 OK', [('Content-Type', 'text/html;charset=utf-8')])
+    file_name = env['PATH_INFO']
+    # file_name = "/index.py"
+    if file_name == "/index.py":
+        return index()
+    elif file_name == "/login.py":
+        return login()
+    else:
+        return 'Hello World! 我爱你中国....'
+```
+
+##### 6 使用模板文件实现
+
+dynamic 文件夹存放 web应用/框架，static 文件夹存放静态文件，templates 文件夹存放模板文件
+
+```python
+# web_server中修改：
+import dynamic.mini_frame
+try:f = open("./static" + file_name, "rb")
+body = dynamic.mini_frame.application(env, self.set_response_header)
+# mini_frame.py 文件
+import re
+def index():
+    with open("./templates/index.html", encoding="utf-8") as f:  # win10 需要 encoding
+        content = f.read()
+    return content
+def center():
+    with open("./templates/center.html", encoding="utf-8") as f:
+        content = f.read()
+    my_stock_info = "这里是从mysql查询出来的数据。。。"  # 替换模板中的数据
+    content = re.sub(r"\{%content%\}", my_stock_info, content)
+    return content
+def application(env, start_response):  # 省略
+```
+
+**以执行 `*.py`文件的位置为基准，所有open 都从这个地址开始找文件    包括导入的模块中的open**
+
+7 运行web服务器时指定端口以及框架、支持配置文件
+
+```python
+# web_server 修改
+import socket
+import re
+import multiprocessing
+import time
+# import dynamic.mini_frame  服务器应该独立的，不应该固定 使用的框架
+import sys
+class WSGIServer(object):
+    def __init__(self, port, app, static_path):
+        # 1. 创建套接字
+        self.tcp_server_socket = socket.socket(socket.AF_INET, socket.SOCK_STREAM)
+        self.tcp_server_socket.setsockopt(socket.SOL_SOCKET, socket.SO_REUSEADDR, 1)
+        # 2. 绑定
+        self.tcp_server_socket.bind(("", port))
+        # 3. 变为监听套接字
+        self.tcp_server_socket.listen(128)
+        self.application = app
+        self.static_path = static_path
+    def service_client(self, new_socket):
+        """为这个客户端返回数据"""
+        # 1. 接收浏览器发送过来的请求 ，即http请求  
+        # GET / HTTP/1.1
+        # .....
+        request = new_socket.recv(1024).decode("utf-8")
+        # print(">>>"*50)
+        # print(request)
+        request_lines = request.splitlines()
+        print("")
+        print(">"*20)
+        print(request_lines)
+        # GET /index.html HTTP/1.1
+        # get post put del
+        file_name = ""
+        ret = re.match(r"[^/]+(/[^ ]*)", request_lines[0])
+        if ret:
+            file_name = ret.group(1)
+            # print("*"*50, file_name)
+            if file_name == "/":
+                file_name = "/index.html"
+        # 2. 返回http格式的数据，给浏览器
+        # 2.1 如果请求的资源不是以.py结尾，那么就认为是静态资源（html/css/js/png，jpg等）
+        if not file_name.endswith(".py"):
+            try:
+                f = open(self.static_path + file_name, "rb")
+            except:
+                response = "HTTP/1.1 404 NOT FOUND\r\n"
+                response += "\r\n"
+                response += "------file not found-----"
+                new_socket.send(response.encode("utf-8"))
+            else:
+                html_content = f.read()
+                f.close()
+                # 2.1 准备发送给浏览器的数据---header
+                response = "HTTP/1.1 200 OK\r\n"
+                response += "\r\n"
+                # 2.2 准备发送给浏览器的数据---boy
+                # response += "hahahhah"
+                # 将response header发送给浏览器
+                new_socket.send(response.encode("utf-8"))
+                # 将response ic.mini_frame.applicationbody发送给浏览器
+                new_socket.send(html_content)
+        else:
+            # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
+            env = dict()  # 这个字典中存放的是web服务器要传递给 web框架的数据信息
+            env['PATH_INFO'] = file_name
+            # {"PATH_INFO": "/index.py"}
+            # body = dynamic.mini_frame.application(env, self.set_response_header)
+            body = self.application(env, self.set_response_header)
+            header = "HTTP/1.1 %s\r\n" % self.status
+            for temp in self.headers:
+                header += "%s:%s\r\n" % (temp[0], temp[1])
+            header += "\r\n"
+            response = header+body
+            # 发送response给浏览器
+            new_socket.send(response.encode("utf-8"))
+        # 关闭套接
+        new_socket.close()
+    def set_response_header(self, status, headers):
+        self.status = status
+        self.headers = [("server", "mini_web v8.8")]
+        self.headers += headers
+    def run_forever(self):
+        """用来完成整体的控制"""
+        while True:
+            # 4. 等待新客户端的链接
+            new_socket, client_addr = self.tcp_server_socket.accept()
+            # 5. 为这个客户端服务
+            p = multiprocessing.Process(target=self.service_client, args=(new_socket,))
+            p.start()
+            new_socket.close()
+        # 关闭监听套接字
+        self.tcp_server_socket.close()
+def main():
+    """控制整体，创建一个web 服务器对象，然后调用这个对象的run_forever方法运行"""
+    if len(sys.argv) == 3:
+        try:  # 将端口和框架文件提出来
+            port = int(sys.argv[1])  # 7890
+            frame_app_name = sys.argv[2]  # mini_frame:application
+        except Exception as ret:
+            print("端口输入错误。。。。。")
+            return  # return 空 结束函数
+    else:
+        print("请按照以下方式运行:")
+        print("python3 xxxx.py 7890 mini_frame:application")
+        return
+    # mini_frame:application
+    ret = re.match(r"([^:]+):(.*)", frame_app_name)
+    if ret:
+        frame_name = ret.group(1)  # mini_frame
+        app_name = ret.group(2)  # application
+    else:
+        print("请按照以下方式运行:")
+        print("python3 xxxx.py 7890 mini_frame:application")
+        return
+    with open("./web_server.conf") as f:  # conf 为配置文件
+        conf_info = eval(f.read())  # eval 将配置变为字典
+    # 此时 conf_info是一个字典里面的数据为：
+    # {
+    #     "static_path":"./static",
+    #     "dynamic_path":"./dynamic"
+    # }
+    sys.path.append(conf_info['dynamic_path'])  # 添加找模块的路径
+    # import frame_name ---> 这样写会找frame_name.py
+    frame = __import__(frame_name)  # 返回值标记这 导入的这个模板    找变量名的值对应的模块
+    app = getattr(frame, app_name)  # 此时app就指向了 dynamic/mini_frame模块中的application这个函数
+    # print(app)
+    wsgi_server = WSGIServer(port, app, conf_info['static_path'])
+    wsgi_server.run_forever()
+if __name__ == "__main__":
+    main()
+```
+
+实现在 WSGI 文件夹下，上面为centos中，win10需要修改细节
+
+### `sys.argv` 
 
 
 
