--- a/就业班.md
+++ b/就业班.md
@@ -5331,7 +5331,7 @@ start slave;  (mysql中执行)
 
 使用 WSGI 协议 实现 mini-web框架，以下内容是迭代的
 
-##### 1 将多进程方式改为面向对象，实现web服务器
+##### 1)将多进程方式改为面向对象，实现web服务器
 
 ```python
 # web_server.py 文件 web/http服务器
@@ -5409,7 +5409,7 @@ if __name__ == "__main__":
     main()
 ```
 
-##### 2 在web服务器中集成解析动态请求的功能
+##### 2)在web服务器中集成解析动态请求的功能
 
 ```python
         # 2. 返回http格式的数据，给浏览器
@@ -5426,7 +5426,7 @@ if __name__ == "__main__":
             new_socket.send(response.encode("utf-8"))
 ```
 
-##### 3 将web服务器和逻辑处理的代码分开
+##### 3)将web服务器和逻辑处理的代码分开
 
 ```python
 import mini_frame
@@ -5460,7 +5460,7 @@ def application(file_name):
 		return "not found you page...."
 ```
 
-##### 4 让web服务器支持WSGI协议
+##### 4)让web服务器支持WSGI协议
 
 ```python
             # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
@@ -5535,7 +5535,7 @@ def application(environ, start_response):
 >
 > WSGI协议就是规定服务器给框架什么，然后框架给服务器回什么
 
-##### 5 通过传递字典实现浏览器请求的资源不同响应不同
+##### 5)通过传递字典实现浏览器请求的资源不同响应不同
 
 ```python
             # 2.2 如果是以.py结尾，那么就认为是动态资源的请求
@@ -5568,7 +5568,7 @@ def application(env, start_response):
         return 'Hello World! 我爱你中国....'
 ```
 
-##### 6 使用模板文件实现
+##### 6)使用模板文件实现
 
 dynamic 文件夹存放 web应用/框架，static 文件夹存放静态文件，templates 文件夹存放模板文件
 
@@ -5594,7 +5594,7 @@ def application(env, start_response):  # 省略
 
 **以执行 `*.py`文件的位置为基准，所有open 都从这个地址开始找文件    包括导入的模块中的open**
 
-7 运行web服务器时指定端口以及框架、支持配置文件
+##### 7)运行web服务器时指定端口以及框架、支持配置文件
 
 ```python
 # web_server 修改
@@ -5741,9 +5741,107 @@ if __name__ == "__main__":
 
 
 
+类中使用 self 存变量，不会随方法的调用而结束
+
+
+
+闭包不只有函数，还有代码
+
+nonlocal    类似 global
+
+闭包 单独的空间  相当于实例     数据是独有的    全局变量方式 是共享的
+
+类中有无用的 魔法方法
+
+
+
+#### 装饰器
+
+
+
+只能在之前 或者之后 加功能
+
+将原来函数的引用当作实参传递给闭包，
+
+
+
+08-通一个装饰器对多个函数进行装饰      一个装饰器可以对多个函数进行装饰
+
+08会创建多个闭包    每装一次，一个闭包
+
+
+
+装饰器在调用函数之前，已经被python解释器执行了
+
+
+
+拆包传
+
+ 11只需要将返回的结果再次返回就可以了
+
+通用：装饰器   接收不定长，拆包传参数，调用原函数后返回
+
+原函数无返回值 是 None
+
+
+
+多个装饰器可以对一个函数进行装饰
+
+先装下面的，后装上面的       下面是函数才可以装  所以后面的先装   图
+
+执行的时候正常 上到下
+
+
+
+类的还可以 .静态方法 等做装饰器
+
+
+
+
+
+
+
+带有参数的装饰器
+
+调用 set_func 并且将 1 当作实参传递，
+
+用上一步调用的返回值 当作装饰器对test1函数进行装饰      代码实现    再嵌套一层函数
+
+路由
+
+在 10 的基础上
+
+去掉 if  根据请求，自动调
+
+先用字典     全局变量定义  大写 或者 g_
+
+使用装饰器自动填充字典     装饰器先执行了  在调用前
+
+字典中的index 指向的原来的函数（装饰器传入时参数，其指向原函数）   而原来函数名index指向了闭包      图
+
+对02 而言 用不到index指向闭包，闭包指向原函数  的过程  装饰器里面没用到     装饰器目前只是为了添加字典，
+
+
+
+路由： 根据不同请求，调用不同内容
+
+  伪静态、静态和动态的区别
+
+伪静态  实现
+
+
+
+
+
+面向切面  通过装饰器加功能
+
+通过这个过程理解 Flask 
+
 
 
 return 类名（）   代表什么   返回一个实例对象的引用
+
+return 函数名  函数的引用   函数名() 返回函数的返回值
 
 # TODO:
 
