update  WSGI_route_mysql

--- a/就业班.md
+++ b/就业班.md
@@ -5755,81 +5755,493 @@ nonlocal    类似 global
 
 
 
-#### 装饰器
+#### 闭包、装饰器
 
+##### 闭包
 
+```python
+# 定义一个函数
+def test(number):
+    # 在函数内部再定义一个函数，并且这个函数用到外边函数的变量，那么将这个函数以及用到的一些变量称之为闭包
+    def test_in(number_in):
+        print("in test_in 函数, number_in is %d" % number_in)
+        return number+number_in
+    # 其实这里返回的就是闭包的结果
+    return test_in
+# 给test函数赋值，这个20就是给参数number
+ret = test(20)
+# 注意这里的100其实给参数number_in
+print(ret(100))
+# 运行结果
+# in test_in 函数, number_in is 100
+# 120
+```
 
-只能在之前 或者之后 加功能
+###### 一个闭包的实际例子
 
-将原来函数的引用当作实参传递给闭包，
+```python
+def line_conf(a, b):
+    def line(x):
+        return a*x + b
+    return line
 
+line1 = line_conf(1, 1)
+line2 = line_conf(4, 5)
+print(line1(5))
+print(line2(5))
+```
 
+这个例子中，函数line与变量a,b构成闭包。在创建闭包的时候，通过line_conf的参数a,b说明了这两个变量的取值，这样，就确定了函数的最终形式(y = x + 1和y = 4x + 5)。只需要变换参数a,b，就可以获得不同的直线表达函数。由此，闭包也具有提高代码可复用性的作用。
 
-08-通一个装饰器对多个函数进行装饰      一个装饰器可以对多个函数进行装饰
+如果没有闭包，需要每次创建直线函数的时候同时说明a,b,x。这样，就需要更多的参数传递，也减少了代码的可移植性。
 
-08会创建多个闭包    每装一次，一个闭包
+注意点：由于闭包引用了外部函数的局部变量，则外部函数的局部变量没有及时释放，消耗内存。与创建实例对象的方式相比，没有一些类中的魔法方法，减少内存消耗。
 
+> 思考：函数、匿名函数、闭包、对象 当做实参时 有什么区别？
+>
+> 1. 匿名函数能够完成基本的简单功能，，，传递是这个函数的引用 只有功能
+> 2. 普通函数能够完成较为复杂的功能，，，传递是这个函数的引用 只有功能
+> 3. 闭包能够将较为复杂的功能，，，传递是这个闭包中的函数以及数据，因此传递是功能+数据
+> 4. 对象能够完成最为复杂的功能，，，传递是很多数据+很多功能，因此传递是功能+数据
 
+![QQ20171104-092312@2x](D:\BaiduNetdiskDownload\基础班-就业班课件资料 -1-4位基础班  5-14就业班\05python和linux高级编程阶段\1-6代码和截图\17-闭包和装饰器\QQ20171104-092312@2x.png)
 
-装饰器在调用函数之前，已经被python解释器执行了
+> 闭包可以理解为内存中的一块空间，包含数据和函数
 
+###### 修改外部函数中的变量
 
+```python
+def test1():
+	x = 200
+	def test2():
+		nonlocal x
+		print("----1----x=%d" % x)
+		x = 100
+		print("----2----x=%d" % x)
+	return test2
 
-拆包传
+t1 = test1()
+t1()
+# ----1----x=200
+# ----2----x=100
+```
 
- 11只需要将返回的结果再次返回就可以了
+类似于修改全局变量的方式( `global`)，闭包中使用 `nonlocal` 关键字
 
-通用：装饰器   接收不定长，拆包传参数，调用原函数后返回
+##### 装饰器
 
-原函数无返回值 是 None
+装饰器可以在装饰的函数 **之前** 或者 **之后** 添加功能。
 
+> **函数名**仅仅是个**变量**，只不过指向了定义的函数而已，所以才能通过 函数名()调用，如果 函数名=xxx被修改了，那么当在执行 函数名()时，调用的就不是之前的那个函数了。
 
+> 写代码要遵循 **开放封闭** 原则，虽然在这个原则是用的面向对象开发，但是也适用于函数式编程，简单来说，它规定已经实现的功能代码不允许被修改，但可以被扩展，即：
+>
+> - 封闭：已实现的功能代码块。**对修改封闭**，意味着类一旦设计完成，就可以独立完成其工作，而不要对类进行任何修改。
+> - 开放：对扩展开放。**对扩展开放**，意味着有新的需求或变化时，可以对现有代码进行扩展，以适应新的情况。
 
-多个装饰器可以对一个函数进行装饰
+###### 实现过程
 
-先装下面的，后装上面的       下面是函数才可以装  所以后面的先装   图
+```python
+def set_func(func):
+    def call_func():
+        print("---这是权限验证1----")
+        print("---这是权限验证2----")
+        func()
+    return call_func
 
+# @函数名 是python的一种语法糖
+@set_func  # 等价于test1 = set_func(test1) ，将原来函数的引用test1当作实参传递给闭包
+def test1():
+    print("-----test1----")
+
+# ret = set_func(test1)  # 通过 @set_func 方式实现
+# ret()
+
+test1()
+```
+
+![QQ20171104-112615@2x](https://i.loli.net/2020/05/07/gnGo9JkKC2AIEHZ.png)
+
+> `test1` 指向了闭包，闭包中的 `func` 指向了原来的函数
+
+###### 装饰器(decorator)功能
+
+1. 引入日志
+2. 函数执行时间统计
+3. 执行函数前预备处理
+4. 执行函数后清理功能
+5. 权限校验等场景
+6. 缓存
+
+```python
+#  统计函数的执行时间
+import time
+def set_func(func):
+    def call_func():
+        start_time = time.time()
+        func()
+        stop_time = time.time()
+        print("alltimeis %f" % (stop_time - start_time))
+    return call_func
+@set_func  # 等价于test1 = set_func(test1) 
+def test1():
+    print("-----test1----")
+    for i in range(10000):
+        pass
+test1()
+```
+
+###### 装饰器示例
+
+```python
+# 1. 对无参数、无返回值的函数进行装饰
+def set_func(func):
+    def call_func():
+        print("---这是权限验证1----")
+        func()
+    return call_func
+@set_func  # 等价于test1 = set_func(test1) 
+def test1():
+    print("-----test1----")
+test1()
+"""装饰器执行行为可理解成
+test1 = set_func(test1)
+# test1 先作为参数赋值给func后, test1 接收指向 set_func 返回的 call_func
+test1()
+# 调用 test1(),即等价调用 call_func()
+# 内部函数 call_func 被引用，所以外部函数的 func 变量(自由变量)并没有释放
+# func里保存的是原 test1 函数对象"""
+# 2. 对有参数、无返回值的函数进行装饰
+def set_func(func):
+    def call_func(a):
+        print("---这是权限验证1----")
+        func(a)
+    return call_func
+@set_func  # 相当于 test1 = set_func(test1)
+def test1(num):
+    print("-----test1----%d" % num)
+test1(100)
+# 3. 对不定长参数的函数进行装饰
+def set_func(func):
+    print("---开始进行装饰")
+    def call_func(*args, **kwargs):  # 这不需要num  num属于 *args, 第一个值给num
+        print("---这是权限验证2----")
+        # func(args, kwargs)  # 不行，相当于传递了2个参数 ：1个元组，1个字典
+        func(*args, **kwargs)  # 拆包
+    return call_func
+@set_func  # 相当于 test1 = set_func(test1)
+def test1(num, *args, **kwargs):
+    print("-----test1----%d" % num)
+    print("-----test1----" , args)
+    print("-----test1----" , kwargs)
+test1(100)
+test1(100, 200)
+test1(100, 200, 300, mm=100)
+# 4. 对带有返回值的函数进行装饰
+def set_func(func):
+    print("---开始进行装饰")
+    def call_func(*args, **kwargs):
+        print("---这是权限验证1----")
+        # func(args, kwargs)  # 不行，相当于传递了2个参数 ：1个元组，1个字典
+        return func(*args, **kwargs)  # 拆包  只需要将返回的结果再次返回就可以了
+    return call_func
+@set_func  # 相当于 test1 = set_func(test1)
+def test1(num, *args, **kwargs):
+    print("-----test1----%d" % num)
+    print("-----test1----" , args)
+    print("-----test1----" , kwargs)
+    return "ok"
+@set_func
+def test2():
+    pass
+ret = test1(100)
+print(ret)
+ret = test2()  # 无返回值 则为 None
+print(ret)
+""" 通用装饰器：接收不定长，拆包传参数，调用原函数后返回 """
+# 5. 一个装饰器可以对多个函数进行装饰，并且装饰器在调用函数之前，已经被python解释器执行了
+def set_func(func):
+    print("---开始进行装饰")
+    def call_func(a):
+        print("---这是权限验证1----")
+        print("---这是权限验证2----")
+        func(a)
+    return call_func
+@set_func  # 相当于 test1 = set_func(test1)
+def test1(num):
+    print("-----test1----%d" % num)
+@set_func  # 一个装饰器对多个函数进行装饰，会创建多个闭包  每装饰一次，一个闭包
+def test2(num):
+    print("-----test2----%d" % num)
+# 装饰器在调用函数之前，已经被python解释器执行了，所以 当调用函数之前 其实已经装饰好了，尽管调用就可以了
+# test1(100)
+# test2(200)
+"""运行结果：
+---开始进行装饰
+---开始进行装饰"""
+# 6. 多个装饰器对同一个函数进行装饰
+def add_qx(func):
+    print("---开始进行装饰权限1的功能---")
+    def call_func(*args, **kwargs):  # 通用写法：接收不定长参数
+        print("---这是权限验证1----")
+        return func(*args, **kwargs)  # 拆包传参数，调用原函数后返回
+    return call_func
+def add_xx(func):
+    print("---开始进行装饰xxx的功能---")
+    def call_func(*args, **kwargs):
+        print("---这是xxx的功能----")
+        return func(*args, **kwargs)
+    return call_func
+@add_qx
+@add_xx
+def test1():
+    print("------test1------")
+test1()
+"""先装下面的，后装上面的  下面是函数才可以装, 所以后面的先装
 执行的时候正常 上到下
+"""
+```
 
+![QQ20171104-121431@2x](https://i.loli.net/2020/05/07/7cIFHQpO859dJbW.png)
 
+**通用装饰器：接收不定长，拆包传参数，调用原函数后返回**
 
-类的还可以 .静态方法 等做装饰器
+###### 类装饰器(了解)
 
+装饰器函数其实是这样一个接口约束，它必须接受一个callable对象作为参数，然后返回一个callable对象。在Python中一般callable对象都是函数，但也有例外。只要某个对象重写了 `__call__()` 方法，那么这个对象就是callable的。
 
+```python
+class Test(object):
+    def __init__(self, func):
+        self.func = func
+    def __call__(self):  # 在这加参数 通用的那种
+        print("这里是装饰器添加的功能.....")
+        return self.func()
 
+@Test  # 相当于get_str = Test(get_str)  这 @Test.静态方法名 等都可以做装饰器
+def get_str():
+    return "haha"
 
+print(get_str())
+#说明：
+#1. 当用Test来装作装饰器对get_str函数进行装饰的时候，首先会创建Test的实例对象
+#   并且会把get_str这个函数名当做参数传递到__init__方法中
+#   即在__init__方法中的属性func指向了get_str指向的函数
+#
+#2. get_str指向了用Test创建出来的实例对象
+#
+#3. 当在使用get_str()进行调用时，就相当于让这个对象()，因此会调用这个对象的__call__方法
+#
+#4. 为了能够在__call__方法中调用原来get_str指向的函数体，所以在__init__方法中就需要一个实例属性来保存这个函数体的引用
+#   所以才有了self.func = func这句代码，从而在调用__call__方法中能够调用到get_str之前的函数体
+```
 
+###### 装饰器带参数
 
+```python
+# 方法：在原有装饰器的基础上，设置外部变量  实现方式：再嵌套一层函数
+def set_level(level_num):
+    def set_func(func):
+        def call_func(*args, **kwargs):
+            if level_num == 1:
+                print("----权限级别1，验证----")
+            elif level_num == 2:
+                print("----权限级别2，验证----")
+            return func()
+        return call_func
+    return set_func
+# 带有参数的装饰器装饰过程分为2步:
+# 1. 调用set_level函数，把1当做实参
+# 2. set_level返回一个装饰器的引用，即set_func
+# 3. 用返回的set_func对test1函数进行装饰（装饰过程与之前一样）
+@set_level(1)
+def test1():
+    print("-----test1---")
+    return "ok"
+@set_level(2)
+def test2():
+    print("-----test2---")
+    return "ok"
+test1()
+test2()  # 可以理解为 set_level(2)(test2)()
+# 不使用参数  没有最外面一层函数
+# @set_func
+# def test1():
+#     print("-----test1---")
+#     return "ok"
+# test1(1)
+```
 
-带有参数的装饰器
+通过装饰器调用参数，使原函数不需要修改
 
-调用 set_func 并且将 1 当作实参传递，
+#### mini-web框架 添加路由、MySQL功能
 
-用上一步调用的返回值 当作装饰器对test1函数进行装饰      代码实现    再嵌套一层函数
-
-路由
-
-在 10 的基础上
-
-去掉 if  根据请求，自动调
-
-先用字典     全局变量定义  大写 或者 g_
-
-使用装饰器自动填充字典     装饰器先执行了  在调用前
-
-字典中的index 指向的原来的函数（装饰器传入时参数，其指向原函数）   而原来函数名index指向了闭包      图
-
-对02 而言 用不到index指向闭包，闭包指向原函数  的过程  装饰器里面没用到     装饰器目前只是为了添加字典，
-
-
+##### 添加路由
 
 路由： 根据不同请求，调用不同内容
 
-  伪静态、静态和动态的区别
+```python
+# 使用装饰器自动填充字典
+# 由于 装饰器在函数调用前已经完成了装饰，所以可行
+# 字典中的index指向的原来的函数（装饰器传入时参数，其指向原函数）  而原来函数名index指向了闭包
+# 用不到index指向闭包，闭包指向原函数 的过程  装饰器里面没用到 -- 装饰器目前只是为了添加字典
+import re
+"""用来存放url路由映射
+URL_FUNC_DICT = {
+    "/index.py": index,
+    "/center.py": center}
+"""
+URL_FUNC_DICT = dict()
+def route(url):
+    def set_func(func):
+        # URL_FUNC_DICT["/index.py"] = index
+        URL_FUNC_DICT[url] = func 
+        # 添加键值对，key是需要访问的url，value是当这个url需要访问的时候，需要调用的函数引用
+        def call_func(*args, **kwargs):  # 这个不会执行
+            return func(*args, **kwargs)
+        return call_func
+    return set_func
+@route("/index.py")   # 相当于 @set_func  # index = set_func(index)  
+def index():
+    with open("./templates/index.html",encoding="utf-8") as f:
+        content = f.read()
+    my_stock_info = "哈哈哈哈 这是你的本月名称....."
+    content = re.sub(r"\{%content%\}", my_stock_info, content)
+    return content
+@route("/center.py")
+def center():
+    with open("./templates/center.html",encoding="utf-8") as f:
+        content = f.read()
+    my_stock_info = "这里是从mysql查询出来的数据。。。"
+    content = re.sub(r"\{%content%\}", my_stock_info, content)
+    return content
+def application(env, start_response):
+    start_response('200 OK', [('Content-Type', 'text/html;charset=utf-8')])
+    file_name = env['PATH_INFO']
+    # file_name = "/index.py"
+    """
+    if file_name == "/index.py":  # 去掉 if  根据请求，自动调
+        return index()
+    elif file_name == "/center.py":
+        return center()
+    else:
+        return 'Hello World! 我爱你中国....'
+    """
+    try:  # 使用异常是因为 异常可以传递，可以获取调用函数中出现的异常
+        # func = URL_FUNC_DICT[file_name]
+        # return func()
+        return URL_FUNC_DICT[file_name]()  # 这执行的字典中指向的函数
+    except Exception as ret:
+        return "产生了异常：%s" % str(ret)
+    # 如果 有 index() ,才会执行装饰器的内容
+```
 
-伪静态  实现
+![QQ20171105-101342@2x](https://i.loli.net/2020/05/07/x1rUpBfVjA7kvNt.png)
 
+只使用黄色部分，通过装饰器实现自动添加字典，而没有使用红色的装饰器的部分
 
+##### 伪静态、静态和动态的区别
+
+###### 静态URL
+
+静态URL类似 `域名/news/2012-5-18/110.html` 我们一般称为`真静态URL`，每个网页有真实的物理路径，也就是真实存在服务器里的。
+
+- 优点是：网站打开速度快，因为它不用进行运算；另外网址结构比较友好，利于记忆。
+- 缺点是：最大的缺点是如果是中大型网站，则产生的页面特别多，不好管理。
+- 一句话总结：静态网站对SEO的影响：静态URL对SEO肯定有加分的影响，因为打开速度快，这个是本质。
+
+###### 动态URL
+
+动态URL类似 `域名/NewsMore.asp?id=5` 或者 `域名/DaiKuan.php?id=17`，带有`?`号的URL，我们一般称为动态网址，每个URL只是一个逻辑地址，并不是真实物理存在服务器硬盘里的。
+
+- 优点是：适合中大型网站，修改页面很方便，因为是逻辑地址，所以占用硬盘空间要比纯静态网站小。
+- 缺点是：因为要进行运算，所以打开速度稍慢，不过这个可有忽略不计，目前有服务器缓存技术可以解决速度问题。最大的缺点是URL结构稍稍复杂，不利于记忆。
+- 一句话总结：动态URL对SEO的影响：目前百度SE已经能够很好的理解动态URL，所以对SEO没有什么减分的影响（特别复杂的URL结构除外）。所以你无论选择动态还是静态其实都无所谓，看你选择的程序和需求了。
+
+###### 伪静态URL
+
+伪静态URL类似 `域名/course/74.html` 这个URL和真静态URL类似。他是通过伪静态规则把动态URL伪装成静态网址。也是逻辑地址，不存在物理地址。
+
+- 优点是：URL比较友好，利于记忆。非常适合大中型网站，是个折中方案。
+- 缺点是：设置麻烦，服务器要支持重写规则，小企业网站或者玩不好的就不要折腾了。另外进行了伪静态网站访问速度并没有变快，因为实质上它会额外的进行运算解释，反正增加了服务器负担，速度反而变慢，不过现在的服务器都很强大，这种影响也可以忽略不计。还有可能会造成动态URL和静态URL都被搜索引擎收录，不过可以用robots禁止掉动态地址。
+- 一句话总结:对SEO的影响：和动态URL一样，对SEO没有什么减分影响。
+
+##### 实现伪静态url
+
+需要修改 `web_server.py`文件、模板文件中的超链接、框架中的装饰器参数
+
+```python
+# ...
+# 2.1 如果请求的资源不是以.html结尾，那么就认为是静态资源（css/js/png，jpg等）
+if not file_name.endswith(".html"):
+# ...
+# 2.2 如果是以.html结尾，那么就认为是动态资源的请求
+
+# ...
+@route("/index.html")
+@route("/center.html")
+```
+
+##### MySQL功能
+
+导入数据
+
+```mysql
+# 1. 创建数据库
+create database stock_db charset=utf8;
+# 2. 选择数据库
+use stock_db;
+# 3. 导入数据
+source stock_db.sql
+```
+
+替换模板
+
+```python
+from pymysql import connect
+# ...
+@route("/index.html")
+def index():
+    with open("./templates/index.html", encoding="utf-8") as f:
+        content = f.read()
+    # my_stock_info = "哈哈哈哈 这是你的本月名称....."
+    # content = re.sub(r"\{%content%\}", my_stock_info, content)
+    # 创建Connection连接
+    conn = connect(host='localhost',port=3306,user='root',
+                   password='mysql',database='stock_db',charset='utf8')
+    # 获得Cursor对象
+    cs = conn.cursor()
+    cs.execute("select * from info;")
+    stock_infos = cs.fetchall()
+    cs.close()
+    conn.close()
+    tr_template = """<tr>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>%s</td>
+        <td>
+            <input type="button" value="添加" id="toAdd" name="toAdd" systemidvaule="000007">
+        </td>
+        </tr>
+    """
+    html = ""
+    for line_info in stock_infos:
+        html += tr_template % (line_info[0],line_info[1],line_info[2],line_info[3],
+                               line_info[4],line_info[5],line_info[6],line_info[7])
+    # content = re.sub(r"\{%content%\}", str(stock_infos), content)
+    content = re.sub(r"\{%content%\}", html, content)
+    return content
+@route("/center.html")
+def center():
+    # ... 省略
+```
+
+实现在 
 
 
 
